# socchina26

./: .gitignore  .gitmodules
projects/cubemx/: .gitignore  socchina26.ioc
projects/esp/: CMakeLists.txt  sdkconfig
projects/esp/lwpkt/: CMakeLists.txt
projects/esp/main/: CMakeLists.txt  idf_component.yml
projects/mdk/: .gitignore  socchina26.uvprojx  sztu-26.uvprojx
src/: cubemx.h  entrypoint.c  libstm32g4xx.lib
src/backend/: cubemx.h  entrypoint.c  internal.h
src/backend/connection/: connection.c  connection.h  handleMsgBk.c  sendAllBk.c  uartPort.c  uartPort.h
src/backend/control/: relay.c  relay.h
src/backend/sample/: dualbuf.h  fft.c  fft.h  pll.h  rms.h  sample.c  sample.h
src/frontend/: entrypoint.c
src/frontend/connection/: connection.c  connection.h  handleMsgFr.c  sendAllFr.c  uartPort.c  uartPort.h
src/frontend/control/: manager.c  manager.h
src/frontend/ui/: input.c  input.h  tft.c  tft.h
src/frontend/ui/fonts/: consolas_40px.c
src/frontend/ui/menu/: menu.h  uiChartMenu.c  uiLoadingMenu.c  uiMeasureMenu.c  uiOcpMenu.c
src/sample/: sample.c  sample.h
src/shared/: binaryStream.c  binaryStream.h  constants.h  packets.h
